# duckyPad-Pro

./: .gitignore  HID_notes.md  LICENSE  README.md  _config.yml  push.sh  reset.sh
_includes/: head-custom.html
doc/: HID_notes.md  beta_test.md  bytecode_vm.md  dpkm_German_macOS.txt  duckyscript3_bytecode_vm.md  duckyscript_for_ai.md  duckyscript_info.md  errata.md  firmware_updates_and_version_history.md  fw_update.md  fw_update_history.md  getting_started.md  kit_assembly.md  ks_info.md  landing.md  linux_macos_notes.md  make_toc.py  migration.md  scrap.md  store_links.md  tinkering_guide.md  troubleshooting.md
firmware/: flash_fw.py  make_fw.py  scraps.c
firmware/dpp_fw/main/: CMakeLists.txt  bluetooth_task.c  ds_vm.c  ds_vm.h  dsb_cache.c  dsb_cache.h  hid_task.c  hid_task.h  idf_component.yml  input_task.c  input_task.h  keyboard.c  keyboard.h  keypress_task.c  keypress_task.h  main.c  mypwm.c  mypwm.h  neopixel_task.c  neopixel_task.h  profiles.c  profiles.h  rotary_encoder.c  rotary_encoder.h  shared.c  shared.h  ssd1306.c  ssd1306.h  ui_task.c  ui_task.h
firmware/tusb_hid/main/: CMakeLists.txt  bluetooth_task.c  bluetooth_task.h  ds_vm.c  ds_vm.h  esp_hid_gap.c  helpers.c  helpers.h  hid_task.c  hid_task.h  input_task.c  input_task.h  keyboard.c  keyboard.h  keypress_task.c  keypress_task.h  main.c  neopixel_task.c  neopixel_task.h  oled_task.c  oled_task.h  parser.c  parser.h  profiles.c  profiles.h  rotary_encoder.c  rotary_encoder.h  sd_task.c  sd_task.h  shared.c  shared.h  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  tusb_hid_example_main.c  ui_task.c  ui_task.h
pc_software/: _build_mac.py  _build_mac_pyinstaller.py  _build_windows.py  _scrap.py  _zip_source.py  check_update.py  ds3_preprocessor.py  ds_syntax_check.py  duck_objs.py  duckypad_config.py  hid_op.py  keywords.py  make_bytecode.py  my_compare.py  myast.py  out.dsb  requirements.txt  sample_script.txt  shared.py  test.txt  test_script.txt  wtf.txt
pcb/: changelog.txt  duckypad.brd  duckypad.lbr  duckypad.sch  duckypad.scr  sfe-gerb274x-4layer.cam
(+1230 files in other folders)
